use css truncate, resolve comments

--- a/public/components/trace_analytics/index.scss
+++ b/public/components/trace_analytics/index.scss
@@ -97,6 +97,10 @@ th[data-test-subj^='tableHeaderCell_dashboard_latency_variance'] {
 .attributes-column-header,
 .attributes-column {
   max-width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-left: 8px;
 }
 
 .trace-group-column {
